
public abstract class service2 {
	public abstract void save(int id,String info);
	public abstract String get(int id);
}
