@startuml

class encryption{
    + String encrypt 
    + Stirng decrypt
}

abstract class service2 {
    {abstract} + void save()
    {abstract} + String get()
}

class sql {
    - Map map
    + sql()
    + void saveinfo()
    + String getinfo()
}

class newSql2 extends service2 {
    - sql mysql 
    + newSql2()
    + void save()
    + String get()
}

newSql2 *--> sql 
newSql2 --> encryption : uses

@enduml